AWS/eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 147518163163.dkr.ecr.eu-north-1.amazonaws.com/simplebank:latest
        imagePullPolicy: Always
        ports: 
        - containerPort: 8000
