AWS/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-bank-api-service
spec:
  selector:
    app: simple-bank-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer # should be ClusterIP to work with ingress but i will not pay 13$ for Domain registration
